package edu.fiuba.algo3.modelo;

import java.util.ArrayList;
import  edu.fiuba.algo3.modelo.Carta.Carta;

public interface IMezclador {
    void mezclar(ArrayList<Carta> cartas);
}
